--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </section>
 
     <section id="">
-            <h2 id="welcome">This is us:</h2>
+            <h2 id="welcome">This is what we do:</h2>
             <div id="left-about">
                     <div class="left-about-heading">
                         <h2>Roadcycling</h2>
@@ -59,5 +59,26 @@
                                 <p>Every friday morning its all on his/her own when we do full speed and finish with a nice brekafast together</p>
                             </div>
     </section>
+
+    <footer>
+        <ul class="social-networks">
+            <li>
+                <a href="https://facebook.com" target="_blank" rel="noopener" 
+                aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
+            </li>
+            <li>
+                <a href="https://twitter.com" target="_blank" rel="noopener" 
+                aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-twitter"></i></a>
+            </li>
+            <li>
+                <a href="https://youtube.com" target="_blank" rel="noopener" 
+                aria-label="Visit our Youtube page (opens in a new tab)"><i class="fa-brands fa-youtube"></i></a>
+            </li>
+            <li>
+                <a href="https://instagram.com" target="_blank" rel="noopener" 
+                aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
+            </li>
+        </ul>
+    </footer>
 </body>
 </html>
