added correct menu

--- a/index.html
+++ b/index.html
@@ -4,81 +4,60 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A cycling club for cyclists in and around Malmo, Sweden">
+    <meta name="keywords" content="cycling, coffee, routes, malmo, skane">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Malmö Cycling Club</title>
 </head>
+
 <body>
-    <header>
-        <a href="index.html">
-        <h1>Welcome to Malmö cycling club</h1>
-        </a>
-        <nav>
-            <ul id="menu">
-                <li>
-                    <a href="#">About us</a>
-                </li>
-                <li>
-                    <a href="routes.html">Our routes</a>
-                </li>
-                <li>
-                    <a href="contact.html">Contact us</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
+    <div>
+        <header class="header" id="header">
+            <div class="navbar">
+                <a href="cafe.html">Cafe</a>
+                <a href="contact.html">Contact</a>
+                <a href="event-calender.html">Events</a>
+              </div>
+        </header>
+    </div>
     
     <section id="hero-outer">
             <div id="hero-image"></div>
             <div id="cover-text">
                 <h2>Malmö Cycling club</h2>
-                <h3>Malmö, Skåne County, Sweden</h3>
             </div>
     </section>
 
-    <section id="">
-            <h2 id="welcome">This is what we do:</h2>
-            <div id="left-about">
-                    <div class="left-about-heading">
-                        <h2>Roadcycling</h2>
-                        <hr>
-                        <p>Let's explore the magic of Skåne country roads together. Every tuesday we do a ride together, starting and finishing the ride together.</p>
-                    </div>
-                    <div id="left-about">
-                            <div class="left-about-heading">
-                                <h2>Gravel rides</h2>
-                                <hr>
-                                <p>Every saturday we go exploring the forrests and have a break in one of the lovely cafés around Skåne.</p>
-                            </div>
-                            <div class="right-about-heading">
-                                <h2>Mountainbike</h2>
-                                <hr>
-                                <p>We also arrange Mountainbike rides, on a track close to Malmö or go for specific routes outside the city.</p>
-                            </div>
-                            <div class="right-about-heading">
-                                <h2>Race-pace</h2>
-                                <hr>
-                                <p>Every friday morning its all on his/her own when we do full speed and finish with a nice brekafast together</p>
-                            </div>
+    <section>
+        <h1>Welcome to our cycling club</h1>
+
+        <p>
+            This is where text about the cycling club will be, and underneath will be three photos of bikes and cyclists.
+        </p>
     </section>
 
-    <footer>
+
+    <div>
+    <footer id="footer">
         <ul class="social-networks">
-            <li>
-                <a href="https://facebook.com" target="_blank" rel="noopener" 
-                aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
-            </li>
-            <li>
-                <a href="https://twitter.com" target="_blank" rel="noopener" 
-                aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-twitter"></i></a>
-            </li>
-            <li>
-                <a href="https://youtube.com" target="_blank" rel="noopener" 
-                aria-label="Visit our Youtube page (opens in a new tab)"><i class="fa-brands fa-youtube"></i></a>
-            </li>
-            <li>
-                <a href="https://instagram.com" target="_blank" rel="noopener" 
-                aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
-            </li>
+        <li>
+            <a href="https://facebook.com" target="_blank" rel="noopener" 
+            aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
+        </li>
+        <li>
+            <a href="https://twitter.com" target="_blank" rel="noopener" 
+            aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-twitter"></i></a>
+        </li>
+        <li>
+            <a href="https://youtube.com" target="_blank" rel="noopener" 
+            aria-label="Visit our Youtube page (opens in a new tab)"><i class="fa-brands fa-youtube"></i></a>
+        </li>
+        <li>
+            <a href="https://instagram.com" target="_blank" rel="noopener" 
+            aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
+        </li>
         </ul>
-    </footer>
+</footer>
+    </div>
 </body>
 </html>
