added photos to all pages

--- a/contact.html
+++ b/contact.html
@@ -7,12 +7,16 @@
     <title>Contact</title>
 </head>
 <body>
-    <section id="hero-outer">
-        <div id="hero-image"></div>
-        <div id="cover-text">
-            <h2>Keep in touch with us!</h2>
-        </div>
-</section>
+    <div>
+        <header class="header" id="header">
+            <div class="navbar">
+                <a href="index.html">Home</a>
+                <a href="cafe.html">Cafe</a>
+                <a href="contact.html">Contact</a>
+                <a href="event-calender.html">Events</a>
+              </div>
+        </header>
+    </div>
 
 <section>
     <h1>Sign up here to subscrib to our newsletter</h1>
@@ -24,6 +28,10 @@
     <p>
         This is some more information about the club
     </p>
+
+    <div id="logo">
+        <img src="assets/images/open-road.jpeg">
+        </div>
 </section>
 
     <div>
