--- a/event-calender.html
+++ b/event-calender.html
@@ -7,12 +7,16 @@
     <title>Calendar</title>
 </head>
 <body>
-    <section id="hero-outer">
-        <div id="hero-image"></div>
-        <div id="cover-text">
-            <h2>Our events</h2>
-        </div>
-</section>
+    <div>
+        <header class="header" id="header">
+            <div class="navbar">
+                <a href="index.html">Home</a>
+                <a href="cafe.html">Cafe</a>
+                <a href="contact.html">Contact</a>
+                <a href="event-calender.html">Events</a>
+              </div>
+        </header>
+    </div>
 
 <section>
     <h1>These are the events happening this year</h1>
@@ -20,6 +24,10 @@
     <p>
         Here will insert a event-calender
     </p>
+
+    <div id="logo">
+        <img src="assets/images/roadcyclist.jpg">
+        </div>
 </section>
 
     <div>
