--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div>
         <header class="header" id="header">
             <div class="navbar">
+                <a href="index.html">Home</a>
                 <a href="cafe.html">Cafe</a>
                 <a href="contact.html">Contact</a>
                 <a href="event-calender.html">Events</a>
@@ -29,11 +30,18 @@
     </section>
 
     <section>
+        <div id="logo">
+            <img src="assets/images/group-of-cyclists.jpg">
+            </div>
+        </div>
         <h1>Welcome to our cycling club</h1>
 
-        <p>
-            This is where text about the cycling club will be, and underneath will be three photos of bikes and cyclists.
+        <h3>
+            We're a cycling club located in Malmö, Skåne with our own café for you to come and enjoy before or after a ride. 
+        </h3>
+        <p>We have only the best beans from a local roastery here in Malmö to serve you fresh coffee with locally produced milk. We also have a small selection of pastries from the bakery down the road. 
         </p>
+
     </section>
 
 
