--- a/cafe.html
+++ b/cafe.html
@@ -6,13 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>about</title>
 </head>
-<body>
-    <section id="hero-outer">
-        <div id="hero-image"></div>
-        <div id="cover-text">
-            <h2>Our Café</h2>
-        </div>
-</section>
+<body>  <div>
+    <header class="header" id="header">
+        <div class="navbar">
+            <a href="index.html">Home</a>
+            <a href="cafe.html">Cafe</a>
+            <a href="contact.html">Contact</a>
+            <a href="event-calender.html">Events</a>
+          </div>
+    </header>
+</div>
 
 <section>
     <h1>Welcome to our Café</h1>
@@ -20,7 +23,11 @@
     <h2>Monday-Friday 09:00-16:00</h2>
     <h2>Saturday-Sunday 11:00-15:00</h2>
 
-    <p>Here will insert a photo of a lovely coffee</p>
+    <div id="logo">
+        <img src="assets/images/coffee-roast.jpg">
+        </div>
+
+    
 </section>
 
     <div>
