added more information and map

--- a/cafe.html
+++ b/cafe.html
@@ -18,16 +18,26 @@
 </div>
 
 <section>
-    <h1>Welcome to our Café</h1>
-    <h2>This is the place for our opening hours</h2>
-    <h2>Monday-Friday 09:00-16:00</h2>
-    <h2>Saturday-Sunday 11:00-15:00</h2>
 
     <div id="logo">
-        <img src="assets/images/coffee-roast.jpg">
+        <img src="assets/images/coffee-roast.jpg" alt="a picture of roasted coffee beans">
         </div>
 
-    
+        /*Place the Welcome text on to the img*/
+    <title>Welcome to our Café</title>
+    <h1>We're open for you:</h1>
+    <p>Monday-Friday 09:00-16:00</p>
+    <p>Saturday-Sunday 11:00-15:00</p>
+</section>
+
+<section> 
+    <head>
+        <title>About us</title>
+    </head>
+    <body>
+        <h1>We're a local café for cyclists, or just coffee lovers - pop by in your finest cycling gear or your everyday wear!</h1>
+        <p>We have only the best beans from a local roastery here in Malmö to serve you fresh coffee with locally produced milk. We also have a small selection of pastries from the bakery down the road. </p>
+    </body>
 </section>
 
     <div>
