--- a/event-calender.html
+++ b/event-calender.html
@@ -19,15 +19,22 @@
     </div>
 
 <section>
-    <h1>These are the events happening this year</h1>
-
-    <p>
-        Here will insert a event-calender
-    </p>
 
     <div id="logo">
-        <img src="assets/images/roadcyclist.jpg">
+        <img src="assets/images/roadcyclist.jpg" alt="a cyclist on an open road">
         </div>
+    <h1>2022 Event Schedule</h1>
+
+    <li>Event 1</li>
+    <p>St Pauli, January 2:nd</p>
+    <li>Event 2</li>
+    <p>Regnbågsbanan, March 14:th</p>
+    <li>Event 3</li>
+    <p>Ribbersborgsstranden, June 17th</p>
+    <li>Event 4</li>     
+    <p>Ystad Saltsjöbad, September 1:st</p>
+
+ 
 </section>
 
     <div>
