--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <section>
         <div id="logo">
-            <img src="assets/images/group-of-cyclists.jpg">
+            <img src="assets/images/group-of-cyclists.jpg" alt="a group of cyclists together">
             </div>
         </div>
         <h1>Welcome to our cycling club</h1>
@@ -39,8 +39,7 @@
         <h3>
             We're a cycling club located in Malmö, Skåne with our own café for you to come and enjoy before or after a ride. 
         </h3>
-        <p>We have only the best beans from a local roastery here in Malmö to serve you fresh coffee with locally produced milk. We also have a small selection of pastries from the bakery down the road. 
-        </p>
+        
 
     </section>
 
