--- a/contact.html
+++ b/contact.html
@@ -19,19 +19,25 @@
     </div>
 
 <section>
+
+    <div id="logo">
+        <img src="assets/images/open-road.jpeg" alt="picture of a cyclist on an open road">
+        </div>
     <h1>Sign up here to subscrib to our newsletter</h1>
 
     <li>
-
+        /*This will be a clickable link*/
     </li>
 
     <p>
-        This is some more information about the club
+        This is how you get in touch with us
     </p>
-
-    <div id="logo">
-        <img src="assets/images/open-road.jpeg">
-        </div>
+   
+        <body>
+            <h3>Find us here:</h3>
+            <div id="map"></div>
+        <script src="https://www.google.com/maps/place/Musette/@55.5980091,12.9935709,17z/data=!3m1!4b1!4m5!3m4!1s0x4653a142c9e577c7:0x81b6bbbe807c679f!8m2!3d55.5979657!4d12.995771"></script>
+        </body>
 </section>
 
     <div>
