added first level css

--- a/cafe.html
+++ b/cafe.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>about</title>
+    <title>cafe</title>
 </head>
 <body>  <div>
     <header class="header" id="header">
@@ -32,11 +32,31 @@
 
 <section> 
     <head>
-        <title>About us</title>
+        <title>Most things begins and ends with coffee, so even cycling</title>
     </head>
     <body>
-        <h1>We're a local café for cyclists, or just coffee lovers - pop by in your finest cycling gear or your everyday wear!</h1>
-        <p>We have only the best beans from a local roastery here in Malmö to serve you fresh coffee with locally produced milk. We also have a small selection of pastries from the bakery down the road. </p>
+        <p>Wether you love cycling or not, you'll find your place in our café, we deliver nice espresso from our Faema E61 and make lovely lattes.
+        <br>
+        If you prefer pure brew or a cold drink, we have that as well, 
+        <br>
+        We have only the best beans from a local roastery here in Malmö to serve you fresh coffee with locally produced milk. We also have a small selection of pastries from the bakery down the road. 
+        <br>
+        Welcome in, wether you're sweaty or nice and tidy, we would love to see you!
+        
+
+            <h2>Menu</h2>
+            <ul>Espresso €3</ul>
+            <ul>Macchiato €3.5</ul>
+            <ul>Cortado €3.5</ul>
+            <ul>Cappucino €3</ul>
+            <ul>Cold brew €3</ul>
+            <ul>Caffe Latte €4</ul>
+            <ul>Lemonade €2.5</ul>
+
+            <div id="logo">
+                <img src="assets/images/making-latte.jpg" alt="a barista making a latte">
+                </div>
+        </p>
     </body>
 </section>
 
@@ -65,5 +85,8 @@
         <p id="social-text">Check out our social medias!</p>
 </footer>
     </div>
+
+     <!--font awesome script-->    
+     <script src="https://kit.fontawesome.com/af04db9847.js" crossorigin="anonymous"></script>
 </body>
 </html>
