--- a/contact.html
+++ b/contact.html
@@ -24,15 +24,16 @@
         <img src="assets/images/open-road.jpeg" alt="picture of a cyclist on an open road">
         </div>
     <h1>Sign up here to subscrib to our newsletter</h1>
-
-    <li>
-        /*This will be a clickable link*/
-    </li>
-
-    <p>
-        This is how you get in touch with us
-    </p>
-   
+        <p>Use our social media tags and join our community:
+            <br>
+            #malmocyclingclub
+            <br>
+            #roadcycling
+            <br>
+            #gravelridesmalmo
+            <br>
+        </p>
+ 
         <body>
             <h3>Find us here:</h3>
             <div id="map"></div>
@@ -40,27 +41,29 @@
         </body>
 </section>
 
+
     <div>
     <footer id="footer">
         <ul class="social-networks">
         <li>
-        <a href="https://facebook.com" target="_blank" rel="noopener" 
-        aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
+        <a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
         </li>
         <li>
-        <a href="https://twitter.com" target="_blank" rel="noopener" 
-        aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-twitter"></i></a>
+        <a href="https://twitter.com" target="_blank" rel="noopener" aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-twitter"></i></a>
         </li>
         <li>
-        <a href="https://youtube.com" target="_blank" rel="noopener" 
-        aria-label="Visit our Youtube page (opens in a new tab)"><i class="fa-brands fa-youtube"></i></a>
+        <a href="https://youtube.com" target="_blank" rel="noopener" aria-label="Visit our Youtube page (opens in a new tab)"><i class="fa-brands fa-youtube"></i></a>
         </li>
         <li>
-        <a href="https://instagram.com" target="_blank" rel="noopener" 
-        aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
+        <a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
         </li>
         </ul>
+
+        <p id="social-text">Check out our social medias!</p>
 </footer>
     </div>
+
+     <!--font awesome script-->    
+     <script src="https://kit.fontawesome.com/af04db9847.js" crossorigin="anonymous"></script>
 </body>
 </html>
