--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         </header>
     </div>
     
-    <section id="hero-outer">
-            <div id="hero-image"></div>
+    <section id="group-of-cyclists">
+            <div id="group-of-cyclists"></div>
             <div id="cover-text">
                 <h2>Malmö Cycling club</h2>
             </div>
@@ -37,9 +37,15 @@
         <h1>Welcome to our cycling club</h1>
 
         <h3>
-            We're a cycling club located in Malmö, Skåne with our own café for you to come and enjoy before or after a ride. 
+            We're a cycling club located in Malmö, Skåne with our own café. 
         </h3>
-        
+        <p>
+            From us you start your bike ride after a nice coffee, or join us to watch the Tour over a cappucino. 
+            <br>
+            We run this cycling café with the intention of gathering Malmös cyclists, with the same passion for good coffee as us. 
+            <br>
+            Let us help you with some new inspirational routes, or just give you some energy for your ride with a freshly baked pastry!
+        </p>
 
     </section>
 
@@ -48,23 +54,23 @@
     <footer id="footer">
         <ul class="social-networks">
         <li>
-            <a href="https://facebook.com" target="_blank" rel="noopener" 
-            aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
+            <a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
         </li>
         <li>
-            <a href="https://twitter.com" target="_blank" rel="noopener" 
-            aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-twitter"></i></a>
+            <a href="https://twitter.com" target="_blank" rel="noopener" aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-twitter"></i></a>
         </li>
         <li>
-            <a href="https://youtube.com" target="_blank" rel="noopener" 
-            aria-label="Visit our Youtube page (opens in a new tab)"><i class="fa-brands fa-youtube"></i></a>
+            <a href="https://youtube.com" target="_blank" rel="noopener" aria-label="Visit our Youtube page (opens in a new tab)"><i class="fa-brands fa-youtube"></i></a>
         </li>
         <li>
-            <a href="https://instagram.com" target="_blank" rel="noopener" 
-            aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
         </li>
         </ul>
+
+        <p id="social-text">Check out our social medias!</p>
 </footer>
     </div>
+    <!--font awesome script-->    
+    <script src="https://kit.fontawesome.com/af04db9847.js" crossorigin="anonymous"></script>
 </body>
 </html>
