--- a/event-calender.html
+++ b/event-calender.html
@@ -41,23 +41,24 @@
     <footer id="footer">
             <ul class="social-networks">
              <li>
-        <a href="https://facebook.com" target="_blank" rel="noopener" 
-        aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
+        <a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
             </li>
         <li>
-        <a href="https://twitter.com" target="_blank" rel="noopener" 
-        aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-twitter"></i></a>
+        <a href="https://twitter.com" target="_blank" rel="noopener" aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-twitter"></i></a>
         </li>
         <li>
-        <a href="https://youtube.com" target="_blank" rel="noopener" 
-        aria-label="Visit our Youtube page (opens in a new tab)"><i class="fa-brands fa-youtube"></i></a>
+        <a href="https://youtube.com" target="_blank" rel="noopener" aria-label="Visit our Youtube page (opens in a new tab)"><i class="fa-brands fa-youtube"></i></a>
         </li>
         <li>
-        <a href="https://instagram.com" target="_blank" rel="noopener" 
-        aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
+        <a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
         </li>
         </ul>
+
+        <p id="social-text">Check out our social medias!</p>
 </footer>
     </div>
+
+     <!--font awesome script-->    
+     <script src="https://kit.fontawesome.com/af04db9847.js" crossorigin="anonymous"></script>
 </body>
 </html>
