added css style

--- a/event-calender.html
+++ b/event-calender.html
@@ -4,19 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Love cycling club for cyclists in Malmo">
+    <meta name="keywords" content="love cycling, cycling club, malmo, sweden">
+    <link rel="stylesheet" href="assets/css/style.css">
+
     <title>Calendar</title>
 </head>
+
 <body>
-    <div>
-        <header class="header" id="header">
-            <div class="navbar">
+    <header>
+            <a href="navbar">
                 <a href="index.html">Home</a>
                 <a href="cafe.html">Cafe</a>
                 <a href="contact.html">Contact</a>
                 <a href="event-calender.html">Events</a>
-              </div>
+            </div>
         </header>
-    </div>
 
 <section>
 
