--- a/index.html
+++ b/index.html
@@ -4,37 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="A cycling club for cyclists in and around Malmo, Sweden">
-    <meta name="keywords" content="cycling, coffee, routes, malmo, skane">
+    <meta name="description" content="Love cycling club for cyclists in Malmo">
+    <meta name="keywords" content="love cycling, cycling club, malmo, sweden">
     <link rel="stylesheet" href="assets/css/style.css">
+
+
     <title>Malmö Cycling Club</title>
 </head>
 
 <body>
     <div>
         <header class="header" id="header">
-            <div class="navbar">
+            <div class="logo">
+                <h2 id="header-text">Malmö Cycling club</h2>
+            </div>
+            <nav>
                 <a href="index.html">Home</a>
                 <a href="cafe.html">Cafe</a>
                 <a href="contact.html">Contact</a>
                 <a href="event-calender.html">Events</a>
-              </div>
+            </nav>
         </header>
     </div>
-    
-    <section id="group-of-cyclists">
-            <div id="group-of-cyclists"></div>
-            <div id="cover-text">
-                <h2>Malmö Cycling club</h2>
-            </div>
-    </section>
 
-    <section>
-        <div id="logo">
+    <section id="background-photo">
+        <div class="group-of-cyclists" id="group-of-cyclists2">
             <img src="assets/images/group-of-cyclists.jpg" alt="a group of cyclists together">
-            </div>
+        <div>
+            <h1 class="welcome">Welcome to our cycling club</h1>
         </div>
-        <h1>Welcome to our cycling club</h1>
+        </div>
+    </section>
 
         <h3>
             We're a cycling club located in Malmö, Skåne with our own café. 
@@ -47,10 +47,8 @@
             Let us help you with some new inspirational routes, or just give you some energy for your ride with a freshly baked pastry!
         </p>
 
-    </section>
 
-
-    <div>
+        <div>
     <footer id="footer">
         <ul class="social-networks">
         <li>
