--- a/cafe.html
+++ b/cafe.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>cafe</title>
+    <meta name="description" content="Love cycling club for cyclists in Malmo">
+    <meta name="keywords" content="love cycling, cycling club, malmo, sweden">
+    <link rel="stylesheet" href="assets/css/style.css">
+
+    <title>Cafe</title>
 </head>
 <body>  <div>
     <header class="header" id="header">
