--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Love cycling club for cyclists in Malmo">
+    <meta name="keywords" content="love cycling, cycling club, malmo, sweden">
+    <link rel="stylesheet" href="assets/css/style.css">
+
     <title>Contact</title>
 </head>
 <body>
