added two column style

--- a/cafe.html
+++ b/cafe.html
@@ -11,24 +11,28 @@
 
     <title>Cafe</title>
 </head>
-<body>  <div>
-    <header class="header" id="header">
-        <div class="navbar">
-            <a href="index.html">Home</a>
-            <a href="cafe.html">Cafe</a>
-            <a href="contact.html">Contact</a>
-            <a href="event-calender.html">Events</a>
-          </div>
-    </header>
-</div>
+<body>  
+    <div>
+        <header class="header" id="header">
+            <div class="logo">
+                <h2 id="header-text">Malmö Cycling club</h2>
+            </div>
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="cafe.html">Cafe</a>
+                <a href="event-calender.html">Events</a>
+                <a href="contact.html">Contact</a>
+            </nav>
+        </header>
+    </div>
 
-<section>
 
-    <div id="logo">
-        <img src="assets/images/coffee-roast.jpg" alt="a picture of roasted coffee beans">
-        </div>
 
-        /*Place the Welcome text on to the img*/
+        <section class="hero-image coffee-cafe">
+            <h1 class="welcome">Welcome to our coffee club</h1>
+        </section>
+
+    
     <title>Welcome to our Café</title>
     <h1>We're open for you:</h1>
     <p>Monday-Friday 09:00-16:00</p>
