--- a/event-calender.html
+++ b/event-calender.html
@@ -12,20 +12,24 @@
 </head>
 
 <body>
-    <header>
-            <a href="navbar">
+    <div>
+        <header class="header" id="header">
+            <div class="logo">
+                <h2 id="header-text">Malmö Cycling club</h2>
+            </div>
+            <nav>
                 <a href="index.html">Home</a>
                 <a href="cafe.html">Cafe</a>
-                <a href="contact.html">Contact</a>
                 <a href="event-calender.html">Events</a>
-            </div>
+                <a href="contact.html">Contact</a>
+            </nav>
         </header>
+    </div>
 
-<section>
+    <section class="hero-image event-calender">
+        <h1 class="welcome">Join our events</h1>
+    </section>
 
-    <div id="logo">
-        <img src="assets/images/roadcyclist.jpg" alt="a cyclist on an open road">
-        </div>
     <h1>2022 Event Schedule</h1>
 
     <li>Event 1</li>
@@ -37,8 +41,6 @@
     <li>Event 4</li>     
     <p>Ystad Saltsjöbad, September 1:st</p>
 
- 
-</section>
 
     <div>
     <footer id="footer">
