--- a/index.html
+++ b/index.html
@@ -21,24 +21,18 @@
             <nav>
                 <a href="index.html">Home</a>
                 <a href="cafe.html">Cafe</a>
-                <a href="contact.html">Contact</a>
                 <a href="event-calender.html">Events</a>
+                <a href="contact.html">Contact</a>
             </nav>
         </header>
     </div>
 
-    <section id="background-photo">
-        <div class="group-of-cyclists" id="group-of-cyclists2">
-            <img src="assets/images/group-of-cyclists.jpg" alt="a group of cyclists together">
-        <div>
+    <section class="hero-image cyclists-home">
             <h1 class="welcome">Welcome to our cycling club</h1>
-        </div>
-        </div>
     </section>
 
-        <h3>
-            We're a cycling club located in Malmö, Skåne with our own café. 
-        </h3>
+
+    <nav>
         <p>
             From us you start your bike ride after a nice coffee, or join us to watch the Tour over a cappucino. 
             <br>
@@ -46,11 +40,11 @@
             <br>
             Let us help you with some new inspirational routes, or just give you some energy for your ride with a freshly baked pastry!
         </p>
+    </nav>
+   
 
 
-        <div>
     <footer id="footer">
-        <ul class="social-networks">
         <li>
             <a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
         </li>
@@ -66,8 +60,7 @@
         </ul>
 
         <p id="social-text">Check out our social medias!</p>
-</footer>
-    </div>
+    </footer>
     <!--font awesome script-->    
     <script src="https://kit.fontawesome.com/af04db9847.js" crossorigin="anonymous"></script>
 </body>
