added footer styles

--- a/index.html
+++ b/index.html
@@ -44,22 +44,20 @@
    
 
 
-    <footer id="footer">
-        <li>
+    <footer class="bg-dark-1">
+    <section id="footer" class="py-5">
+        <div class="container text-center">
             <a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
-        </li>
-        <li>
+   
             <a href="https://twitter.com" target="_blank" rel="noopener" aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-twitter"></i></a>
-        </li>
-        <li>
+      
             <a href="https://youtube.com" target="_blank" rel="noopener" aria-label="Visit our Youtube page (opens in a new tab)"><i class="fa-brands fa-youtube"></i></a>
-        </li>
-        <li>
+        
             <a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
-        </li>
-        </ul>
-
         <p id="social-text">Check out our social medias!</p>
+        <h6 class="m-0 mt-4 text-center text-white text-capitalize">Copyright &copy; 2022 Designed by Jessica Fransson</h6>
+    </div>
+    </section>
     </footer>
     <!--font awesome script-->    
     <script src="https://kit.fontawesome.com/af04db9847.js" crossorigin="anonymous"></script>
