added correct styling to footer

--- a/cafe.html
+++ b/cafe.html
@@ -32,39 +32,40 @@
             <h1 class="welcome">Welcome to our coffee club</h1>
         </section>
 
-    
-    <title>Welcome to our Café</title>
-    <h1>We're open for you:</h1>
-    <p>Monday-Friday 09:00-16:00</p>
-    <p>Saturday-Sunday 11:00-15:00</p>
-</section>
-
+    <div class="opening-hours">
+        <h2>We're open for you:</h2>
+        <ul>
+            <li>Monday-Friday 09:00-16:00</li>
+            <li>Saturday-Sunday 11:00-15:00</li>
+        </ul>
+    </div>
+    <div class="menu">
+        <h2>Menu:</h2>
+        <ul>
+            <li>
+                <li>Espresso €3</li>
+                <li>Macchiato €3.5</li>
+                <li>Cortado €3.5</li>
+                <li>Cappucino €3</li>
+                <li>Cold brew €3</li>
+                <li>Caffe Latte €4</li>
+                <li>Lemonade €2.5</li>
+        </ul>
+    </div>
 <section> 
-    <head>
-        <title>Most things begins and ends with coffee, so even cycling</title>
-    </head>
     <body>
-        <p>Wether you love cycling or not, you'll find your place in our café, we deliver nice espresso from our Faema E61 and make lovely lattes.
+        <h1>Most things begins and ends with coffee, so even cycling</h1>
+        <br>    
+        <h2>Wether you love cycling or not, you'll find your place in our café
         <br>
-        If you prefer pure brew or a cold drink, we have that as well, 
+        We have only the best beans from a local roastery here in Malmö to serve you fresh coffee with locally produced milk. 
         <br>
-        We have only the best beans from a local roastery here in Malmö to serve you fresh coffee with locally produced milk. We also have a small selection of pastries from the bakery down the road. 
+        We also have a small selection of pastries from the bakery down the road. 
         <br>
         Welcome in, wether you're sweaty or nice and tidy, we would love to see you!
-        
+        </h2>
+        <id class="latte-art barista-latte"></id>
 
-            <h2>Menu</h2>
-            <ul>Espresso €3</ul>
-            <ul>Macchiato €3.5</ul>
-            <ul>Cortado €3.5</ul>
-            <ul>Cappucino €3</ul>
-            <ul>Cold brew €3</ul>
-            <ul>Caffe Latte €4</ul>
-            <ul>Lemonade €2.5</ul>
-
-            <div id="logo">
-                <img src="assets/images/making-latte.jpg" alt="a barista making a latte">
-                </div>
         </p>
     </body>
 </section>
