added style rule to submit button

--- a/event-calender.html
+++ b/event-calender.html
@@ -13,15 +13,13 @@
 
 <body>
     <div>
-        <header class="header" id="header">
-            <div class="logo">
-                <h2 id="header-text">Malmö Cycling club</h2>
-            </div>
+        <header class="header">
+            <a href="index.html" class="logo">Malmö Cycling club</a>
             <nav>
                 <a href="index.html">Home</a>
                 <a href="cafe.html">Cafe</a>
                 <a href="event-calender.html">Events</a>
-                <a href="contact.html">Contact</a>
+                <a href="contact.html">Contac
             </nav>
         </header>
     </div>
