--- a/index.html
+++ b/index.html
@@ -8,16 +8,13 @@
     <meta name="keywords" content="love cycling, cycling club, malmo, sweden">
     <link rel="stylesheet" href="assets/css/style.css">
 
-
     <title>Malmö Cycling Club</title>
 </head>
 
 <body>
     <div>
-        <header class="header" id="header">
-            <div class="logo">
-                <h2 id="header-text">Malmö Cycling club</h2>
-            </div>
+        <header class="header">
+            <a href="index.html" class="logo">Malmö Cycling club</a>
             <nav>
                 <a href="index.html">Home</a>
                 <a href="cafe.html">Cafe</a>
