--- a/cafe.html
+++ b/cafe.html
@@ -13,10 +13,8 @@
 </head>
 <body>  
     <div>
-        <header class="header" id="header">
-            <div class="logo">
-                <h2 id="header-text">Malmö Cycling club</h2>
-            </div>
+        <header class="header">
+            <a href="index.html" class="logo">Malmö Cycling club</a>
             <nav>
                 <a href="index.html">Home</a>
                 <a href="cafe.html">Cafe</a>
