--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
         <div class="column">
                 <h2>What we do</h2>
                 <p>We are bike enthusiasts for both roadcycling and gravel</p>
+                <p>We want this to be the local spot for all cyclists, road and gravel riders.</p>
+                <p>Our coffee is roasted locally with a lot of love from local brewery</p>
         </div>
     </div>
 
