added photo to cafe page

--- a/cafe.html
+++ b/cafe.html
@@ -34,6 +34,7 @@
             <p>Come on in for a nice cup of coffee before or after your ride.</p>
             <p>We also serve pastries from the bakery down the road</p>
             <p>So pop by before or after your ride for a lovely treat!</p>
+            <img src="./assets/images/latte.jpg" alt="image-of-coffee" class="latte">
         </div>
         <div class="column">
                 <h2>We're open for you:</h2>
