--- a/cafe.html
+++ b/cafe.html
@@ -13,7 +13,7 @@
 </head>
 <body>  
         <header class="header">
-            <a href="index.html" class="logo">Malmö Cycling club</a>
+            <a href="index.html"><img class="logo" src="./assets/images/logo.svg"></a>
             <nav>
                 <a href="index.html">Home</a>
                 <a href="cafe.html">Cafe</a>
