added youtube video for audio addition

--- a/event-calender.html
+++ b/event-calender.html
@@ -63,6 +63,8 @@
                     <li>October 8th, meeting point, Regnbågsbanan, Malmö</li>
                 </ul>
                 <img src="./assets/images/event-race2.jpg" alt="group of cyclists racing" class="race">
+                <iframe width="420" height="315" src="https://www.youtube.com/watch?v=hZL7ZejA5VQ?autoplay=1&mute=1"></iframe>
+
             </div>
         </div>
     </div>
